<resources>
    <string name="app_name">let\'s cook</string>
    <string name="let_s_cook">let\'s cook</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="e_mail_or_phone_number">: E-mail</string>
    <string name="password">: Password</string>
    <string name="didn_t_have_an_account">Didn\'t have an account ?</string>
    <string name="sign_in">Sign IN</string>
    <string name="forget_password">Forget password ?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_new">Create New</string>
    <string name="sign_up">Sign UP</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search_your_recipes">Search your recipes</string>
    <string name="description">Description</string>
    <string name="ingredients">Ingredients</string>
    <string name="steps">Steps</string>
    <string name="nutritioninfo">NutritionInfo</string>
    <string name="search">Search</string>
    <string name="facebook_app_id">567162047573009</string>
    <string name="fb_login_protocol_scheme">fb567162047573009</string>
    <string name="retry">Retry</string>
    <string name="please_check_your_connection">Please check your connection</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="oops">OOPS!</string>


</resources>