<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_500sdp">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_300sdp"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/inernetconnection" />

    <TextView
        android:id="@+id/txt_internet_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/kaushan_script_regular"
        android:text="@string/oops"
        android:textColor="@color/color_logo"
        android:textSize="@dimen/_22ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/animation_view" />

    <TextView
        android:id="@+id/txt_internet_connection1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/kaushan_script_regular"
        android:text="@string/no_internet_connection"
        android:textColor="@color/color_logo"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_internet_connection" />

    <TextView
        android:id="@+id/txt_internet_connection2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/kaushan_script_regular"
        android:text="@string/please_check_your_connection"
        android:textColor="@color/color_logo"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_internet_connection1" />

    <Button
        android:id="@+id/btn_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:background="@drawable/shapeofbutton"
        android:fontFamily="@font/kaushan_script_regular"
        android:text="@string/retry"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:backgroundTint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_internet_connection2" />

</androidx.constraintlayout.widget.ConstraintLayout>