<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bacl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.signInUp.SignIn">

        <ImageView
            android:id="@+id/iamge_svg_logo_login"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_chef"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_logo_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kaushan_script_regular"
            android:text="@string/let_s_cook"
            android:textColor="@color/color_logo"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iamge_svg_logo_login" />

        <TextView
            android:id="@+id/text_welcome_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/lato_mediumitalic"
            android:text="@string/welcome_back"
            android:textColor="@color/black"
            android:textSize="@dimen/_22ssp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_logo_login" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_username_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            app:boxStrokeColor="@color/color_logo"
            app:hintTextColor="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_welcome_logo"
            app:startIconDrawable="@drawable/ic_baseline_person_outline_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_username_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kaushan_script_regular"
                android:hint="@string/e_mail_or_phone_number"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_15ssp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_password_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            app:boxStrokeColor="@color/color_logo"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:hintTextColor="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_username_input"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black"
            app:startIconDrawable="@drawable/ic_baseline_lock_open_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_password_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kaushan_script_regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/black"
                android:textSize="@dimen/_15ssp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:fontFamily="@font/lato_mediumitalic"
            android:text="@string/forget_password"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_password_input" />
        <CheckBox
            android:id="@+id/checkbox_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Remember me !"
            android:fontFamily="@font/lato_mediumitalic"
            app:layout_constraintTop_toBottomOf="@id/text_password_input"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginLeft="@dimen/_21sdp"/>

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/progress_circular_login"
            style="@style/SpinKitView.Circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:visibility="gone"
            app:SpinKit_Color="@color/color_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_forget_password" />


        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/shapeofbutton"
            android:fontFamily="@font/lato_mediumitalic"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            app:backgroundTint="@color/color_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_forget_password" />

        <com.google.android.gms.common.internal.SignInButtonImpl
            android:id="@+id/signIn_google"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_80sdp"
            android:layout_marginEnd="@dimen/_80sdp"
            android:background="@drawable/ic_google"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_forget_password" />


        <FrameLayout
            android:id="@+id/FrameLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_forget_password"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/_80sdp"
            android:layout_marginLeft="@dimen/_80sdp">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>
            <Button
                android:id="@+id/fb"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:background="@drawable/ic_facebook"
                android:onClick="onClick"
                android:textStyle="bold"
                app:backgroundTint="@null" />
        </FrameLayout>


        <TextView
            android:id="@+id/text_didNot_have"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/dancingscript_regular"
            android:text="@string/didn_t_have_an_account"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/FrameLayout1" />

        <TextView
            android:id="@+id/text_createNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/lato_mediumitalic"
            android:text="@string/create_new"
            android:textColor="@color/color_logo"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/text_didNot_have"
            app:layout_constraintTop_toBottomOf="@id/signIn_google" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>